--- a/src/components/ItemNews/ItemNews.module.css
+++ b/src/components/ItemNews/ItemNews.module.css
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     column-gap: 15px;
+    width: 300px;
 }
 
 .item__image {
-    width: 180px;
+    width: 220px;
     height: 160px;
     background-color: rgb(202, 202, 202);
     background-size: cover;
@@ -37,10 +38,11 @@
 @media (max-width: 768px) {
     .item {
         column-gap: 15px;
+        width: 100%;
     }
 
     .item__image {
-        width: 100px;
+        width: 150px;
         height: 100px;
     }
 
@@ -64,8 +66,8 @@
     }
 
     .item__image {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 80px;
     }
 
     .item__text {
